--- a/career.ipynb
+++ b/career.ipynb
@@ -3114,7 +3114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "id": "1aa20af6",
    "metadata": {},
    "outputs": [
@@ -3140,6 +3140,7 @@
     }
    ],
    "source": [
+    "#Report\n",
     "report=classification_report(y_test,y_pred)\n",
     "print(report)"
    ]
